--- a/MS-Studio-p1.ipynb
+++ b/MS-Studio-p1.ipynb
@@ -59,19 +59,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Data Understanding\n",
     "\n",
-    "Describe the data being used for this project.\n",
-    "***\n",
-    "Questions to consider:\n",
-    "* Where did the data come from, and how do they relate to the data analysis questions?\n",
-    "* What do the data represent? Who is in the sample and what variables are included?\n",
-    "* What is the target variable?\n",
-    "* What are the properties of the variables you intend to use?\n",
-    "***"
+    "The data we're working with in this project is based on publicly available movie datasets. Our aim is to answer questions related to movie ratings, box office performance, and profitability.\n",
+    "We're looking at movies that were released between 2010 and 2018 and gathering information such as ratings, budgets, and domestic and worldwide gross profits. Our target variable is the profitability of each movie.\n",
+    "Some of the properties of the variables we're working with include both categorical and numerical data types, and there are a few missing values that we'll need to address."
    ]
   },
   {
@@ -868,30 +864,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Data Preparation\n",
     "\n",
-    "Describe and justify the process for preparing the data for analysis.\n",
-    "\n",
-    "***\n",
-    "Questions to consider:\n",
-    "* Were there variables you dropped or created?\n",
-    "* How did you address missing values or outliers?\n",
-    "* Why are these choices appropriate given the data and the business problem?\n",
-    "***\n",
-    "\n",
-    "Properly preparing the data ensures that the analysis is based on accurate and reliable data, leading to better insights and better decision-making."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Here you run your code to clean the data"
+    "To get the data ready for analysis, I started by dropping columns that weren't relevant to my research questions and merging data from different sources. Next, I looked for missing values and outliers in the data. For missing values, I used imputation techniques to fill in the gaps, while for outliers, I used both visualizations and statistical methods to identify and address them. I believe these choices were appropriate given the nature of the data and my research questions, as they allowed me to conduct a thorough and accurate analysis while keeping the most relevant variables."
    ]
   },
   {
@@ -1366,23 +1345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nIn the columns production_budget, domestic_gross and worldwide_gross, there are commas and $ which will interfere with the analysis process.\\nSo we will run a code that will drop the commas and the $.\\n'"
+       "'\\nIn the columns production_budget, domestic_gross and worldwide_gross, there are commas and $\\nwhich will interfere with the analysis process.\\nSo we will run a code that will drop the commas and the $.\\n'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\"\n",
-    "In the columns production_budget, domestic_gross and worldwide_gross, there are commas and $ which will interfere with the analysis process.\n",
+    "In the columns production_budget, domestic_gross and worldwide_gross, there are commas and $\n",
+    "which will interfere with the analysis process.\n",
     "So we will run a code that will drop the commas and the $.\n",
     "\"\"\""
    ]
@@ -4461,9 +4441,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
